<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".WriteNotes">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:contentDescription="@string/back_button"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <ImageView
                android:id="@+id/wsave"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:contentDescription="@string/to"
                app:srcCompat="@drawable/ic_baseline_save_24" />

            <!--            <ImageView-->
            <!--                android:id="@+id/share1"-->
            <!--                android:layout_width="30dp"-->
            <!--                android:layout_height="30dp"-->
            <!--                android:layout_gravity="end"-->
            <!--                android:layout_marginTop="16dp"-->
            <!--                android:layout_marginEnd="24dp"-->
            <!--                android:layout_weight="1"-->
            <!--                app:srcCompat="@drawable/ic_baseline_share_24" />-->
        </androidx.appcompat.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/wtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/title1"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/wdetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="top"
            android:hint="@string/write_here"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:textColorHint="#757575" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>